# reqwest-middleware

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.cargo/: audit.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  permaref.yaml  release-plz.yml
reqwest-middleware/: CHANGELOG.md  Cargo.toml
reqwest-middleware/src/: client.rs  error.rs  lib.rs  middleware.rs  req_init.rs
reqwest-retry/: CHANGELOG.md  Cargo.toml  README.md
reqwest-retry/src/: lib.rs  middleware.rs  retryable.rs  retryable_strategy.rs
reqwest-retry/tests/: retry.rs
reqwest-retry/tests/all/: main.rs  retry.rs
reqwest-retry/tests/all/helpers/: mod.rs  simple_server.rs
reqwest-tracing/: CHANGELOG.md  Cargo.toml  README.md
reqwest-tracing/src/: lib.rs  middleware.rs  otel.rs  reqwest_otel_span_builder.rs  reqwest_otel_span_macro.rs  root_span.rs  root_span_builder.rs  root_span_macro.rs
