[package]
name = "reqwest-middleware"
version = "0.5.0"
authors = ["Rodrigo Gryzinski <rodrigo.gryzinski@truelayer.com>"]
edition = "2018"
description = "Wrapper around reqwest to allow for client middleware chains."
repository = "https://github.com/TrueLayer/reqwest-middleware"
license = "MIT OR Apache-2.0"
keywords = ["reqwest", "http", "middleware"]
categories = ["web-programming::http-client"]
readme = "../README.md"

[features]
multipart = ["reqwest/multipart"]
json = ["reqwest/json"]
charset = ["reqwest/charset"]
http2 = ["reqwest/http2"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
http = "1.3.1"
reqwest = { version = "0.12.14", default-features = false }
serde = "1.0.219"
thiserror = "2.0.12"
tower-service = "0.3.3"

[dev-dependencies]
reqwest = { version = "0.12.14", features = ["rustls-tls"] }
reqwest-retry = { path = "../reqwest-retry" }
reqwest-tracing = { path = "../reqwest-tracing" }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.3"
