[package]
name = "reqwest-retry"
version = "0.7.1"
authors = ["Rodrigo Gryzinski <rodrigo.gryzinski@truelayer.com>"]
edition = "2018"
description = "Retry middleware for reqwest."
repository = "https://github.com/TrueLayer/reqwest-middleware"
license = "MIT OR Apache-2.0"
keywords = ["reqwest", "http", "middleware", "retry"]
categories = ["web-programming::http-client"]

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
reqwest-middleware = { version = ">0.3.0, <0.6.0", path = "../reqwest-middleware" }

anyhow = "1.0.97"
async-trait = "0.1.87"
futures = "0.3.31"
http = "1.3"
reqwest = { version = "0.12.14", default-features = false }
retry-policies = "0.4"
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = "1.0"
tokio = { version = "1.44.0", default-features = false, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.4.1"
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[dev-dependencies]
paste = "1.0.15"
tokio = { version = "1.44.0", features = ["full"] }
wiremock = "0.6.3"
futures = "0.3.31"
