[package]
name = "reqwest-retry"
version = "0.8.0"
authors = ["Rodrigo Gryzinski <rodrigo.gryzinski@truelayer.com>"]
edition = "2018"
description = "Retry middleware for reqwest."
repository = "https://github.com/TrueLayer/reqwest-middleware"
license = "MIT OR Apache-2.0"
keywords = ["reqwest", "http", "middleware", "retry"]
categories = ["web-programming::http-client"]

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
reqwest-middleware = { version = ">0.3.0, <0.5.0", path = "../reqwest-middleware" }

anyhow = "1.0.0"
async-trait = "0.1.51"
futures = "0.3.0"
http = "1.0"
reqwest = { version = "0.12.0", default-features = false }
retry-policies = "0.5"
thiserror = "2.0"
tracing = { version = "0.1.26", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = "1.0"
tokio = { version = "1.6.0", default-features = false, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.4.1"
getrandom = { version = "0.2.0", features = ["js"] }

[dev-dependencies]
paste = "1.0.0"
tokio = { version = "1.0.0", features = ["full"] }
wiremock = "0.6.0"
futures = "0.3.0"
